# vqa_project

vqa_project/: Makefile  README.md  pyproject.toml  requirements.txt
vqa_project/initial_scripts/: dowload_kvasir_vqa.py
vqa_project/vqa_project/: dataset.py  features.py  plots.py
vqa_project/vqa_project/modeling/: predict.py
vqa_project/vqa_project_scripts/: __init__.py
vqa_project/vqa_project_scripts/modeling/: train.py
